# routes/admin/generate/routes.go
@@ -1,0 +1,17 @@
+// Code generated by goctl. DO NOT EDIT.
+package generate
+
+import (
+	"admin_template/handler/admin/generate"
+	"admin_template/middleware"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterAdminGenerateRoute(e *gin.Engine) {
+	g := e.Group("")
+	g.Use(middleware.JwtMiddleware)
+	g.GET("/generate", generate.ListHandle)
+	g.POST("/generate", generate.GenerateHandle)
+
+}
